--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Common Tag -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Website Undangan Pernikahan Wahyu dan Riski Secara Online</title>
+    <title>Website Undangan Pernikahan CONTOH</title>
 
     <!-- SEO Tag -->
     <meta name="author" content="dewanakl">
