--- a/index.html
+++ b/index.html
@@ -5,31 +5,31 @@
     <!-- Common Tag -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Website Undangan Pernikahan CONTOH</title>
+    <title>Website Undangan Pernikahan Rian & Afika</title>
 
     <!-- SEO Tag -->
     <meta name="author" content="dewanakl">
     <meta name="language" content="id">
     <meta name="robots" content="index, follow, max-image-preview:large">
     <meta name="googlebot" content="index, follow, max-image-preview:large">
-    <meta name="title" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
-    <meta name="description" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
+    <meta name="title" content="Website Undangan Pernikahan Rian & Afika">
+    <meta name="description" content="Website Undangan Pernikahan Rian & Afika">
     <meta name="keywords" content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, template undangan pernikahan, undangan pernikahan, template undangan online, wedding invitation github, template website, template website undangan pernikahan">
-    <meta property="og:title" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
-    <meta property="og:description" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
+    <meta property="og:title" content="Website Undangan Pernikahan Rian & Afika">
+    <meta property="og:description" content="Website Undangan Pernikahan Rian & Afika">
     <meta property="og:keywords" content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, template undangan pernikahan, undangan pernikahan, template undangan online, wedding invitation github, template website, template website undangan pernikahan">
     <meta property="og:image" content="https://ulems.my.id/assets/images/bg.png">
     <meta property="og:image:secure_url" content="https://ulems.my.id/assets/images/bg.png">
     <meta property="og:image:type" content="image/png">
-    <meta property="og:image:alt" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
+    <meta property="og:image:alt" content="Website Undangan Pernikahan Rian & Afika">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="id_ID">
     <meta property="og:url" content="https://ulems.my.id">
-    <meta property="og:site_name" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
+    <meta property="og:site_name" content="Website Undangan Pernikahan Rian & Afika">
 
     <!-- Appearance -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
+    <meta name="apple-mobile-web-app-title" content="Website Undangan Pernikahan Rian & Afika">
     <meta name="theme-color" content="#111111">
     <meta name="color-scheme" content="dark">
     <link rel="canonical" href="https://ulems.my.id/">
@@ -122,7 +122,7 @@
                     </div>
                 </div>
 
-                <h2 class="font-esthetic my-4" style="font-size: 2.5rem;">Wahyu &amp; Riski</h2>
+                <h2 class="font-esthetic my-4" style="font-size: 2.5rem;">Rian &amp; Afika</h2>
                 <p class="mb-0" style="font-size: 1.25rem;">Rabu, 15 Maret 2023</p>
 
                 <a class="btn btn-outline-light btn-sm shadow rounded-pill px-3 my-2" target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=The%20Wedding%20of%20Wahyu%20and%20Riski&details=The%20Wedding%20of%20Wahyu%20and%20Riski%20%7C%2015%20Maret%202023%20%7C%20RT%2010%20RW%2002,%20Desa%20Pajerukan,%20Kec.%20Kalibagor,%20Kab.%20Banyumas,%20Jawa%20Tengah%2053191%20%7C%2010.00%20-%2011.00%20WIB&dates=20230315T100000/20230315T110000&location=https://goo.gl/maps/ALZR6FJZU3kxVwN86">
@@ -177,9 +177,9 @@
                         <div class="img-crop border border-3 border-light shadow my-4 mx-auto">
                             <img src="./assets/images/cowo.png" alt="cowo" onclick="util.modal(this)">
                         </div>
-                        <h2 class="font-esthetic" style="font-size: 2.5rem;">Wahyu Siapa</h2>
-                        <p class="mt-3 mb-0" style="font-size: 1.25rem;">Putra</p>
-                        <p class="mb-0">Bapak ... &amp; Ibu ...</p>
+                        <h2 class="font-esthetic" style="font-size: 2.5rem;">Rian Aryandi</h2>
+                        <p class="mt-3 mb-0" style="font-size: 1.25rem;">Gedo / Jombang</p>
+                        <p class="mb-0">Bapak Nana &amp; Ibu Neneng </p>
                     </div>
 
                     <!-- Love animation -->
@@ -206,9 +206,9 @@
                         <div class="img-crop border border-3 border-light shadow my-4 mx-auto">
                             <img src="./assets/images/cewe.png" alt="cewe" onclick="util.modal(this)">
                         </div>
-                        <h2 class="font-esthetic" style="font-size: 2.5rem;">Riski Siapa</h2>
-                        <p class="mt-3 mb-0" style="font-size: 1.25rem;">Putri</p>
-                        <p class="mb-0">Bapak ... &amp; Ibu ...</p>
+                        <h2 class="font-esthetic" style="font-size: 2.5rem;">Afika Maylia D.K</h2>
+                        <p class="mt-3 mb-0" style="font-size: 1.25rem;">Fika</p>
+                        <p class="mb-0">Bapak Yulianto &amp; Ibu Yuliani</p>
                     </div>
                 </div>
             </div>
@@ -285,7 +285,7 @@
                         </div>
                     </div>
 
-                    <p class="mt-4 py-2" style="font-size: 0.95rem;">Dengan memohon rahmat dan ridho Allah Subhanahu Wa Ta'ala, insyaAllah kami akan menyelenggarakan acara:</p>
+                    <p class="mt-4 py-2" style="font-size: 0.95rem;">Dengan memohon rahmat dan ridho Allah Subhanahu Wa Ta'ala, Insya Allah kami akan menyelenggarakan acara:</p>
 
                     <!-- Love animation -->
                     <div class="position-relative">
@@ -299,18 +299,18 @@
                     <div class="overflow-x-hidden">
                         <div class="py-2" data-aos="fade-right" data-aos-duration="1500">
                             <h2 class="font-esthetic" style="font-size: 2rem;">Akad</h2>
-                            <p style="font-size: 0.95rem;">Pukul 10.00 WIB - Selesai</p>
+                            <p style="font-size: 0.95rem;">Pukul 09.00 WIB - Selesai</p>
                         </div>
 
                         <div class="py-2" data-aos="fade-left" data-aos-duration="1500">
                             <h2 class="font-esthetic" style="font-size: 2rem;">Resepsi</h2>
-                            <p style="font-size: 0.95rem;">Pukul 13.00 WIB - Selesai</p>
+                            <p style="font-size: 0.95rem;">Pukul 11.00 WIB - Selesai</p>
                         </div>
                     </div>
 
                     <div class="py-2" data-aos="fade-up" data-aos-duration="1500">
                         <a href="https://goo.gl/maps/ALZR6FJZU3kxVwN86" target="_blank" class="btn btn-outline-light btn-sm rounded-pill shadow mb-2 px-3"><i class="fa-solid fa-map-location-dot me-2"></i>Lihat Google Maps</a>
-                        <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.95rem;">RT 10 RW 02, Desa Pajerukan, Kec. Kalibagor, Kab. Banyumas, Jawa Tengah 53191</p>
+                        <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.95rem;">RT 10 RW 02, Desa Sirnagalih, Kec. Tamansari, Kab. Bogor, Jawa Barat 16610</p>
                     </div>
 
                     <!-- Love animation -->
@@ -420,11 +420,11 @@
                                     <button class="btn btn-outline-dark btn-sm rounded-4" data-copy="123456789101112" onclick="util.copy(this, 'Tersalin')"><i class="fa-solid fa-copy me-1"></i>Salin</button>
                                 </div>
 
-                                <p class="mt-2 mb-0 p-0" style="font-size: 0.95rem;">Nama Wahyu Siapa</p>
+                                <p class="mt-2 mb-0 p-0" style="font-size: 0.95rem;">A/N Rian Aryandi</p>
                             </div>
 
                             <div class="col card-body border rounded-4 shadow p-4 mx-4 mt-2 mb-4 text-start" data-aos="fade-down" data-aos-duration="1500">
-                                <img src="https://upload.wikimedia.org/wikipedia/id/thumb/5/55/BNI_logo.svg/1024px-BNI_logo.svg.png" class="img-fluid w-25" alt="bni">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/Bank_Mandiri_logo_2016.svg/2560px-Bank_Mandiri_logo_2016.svg.png.svg.png" class="img-fluid w-25" alt="bni">
 
                                 <div class="d-flex justify-content-between align-items-center mt-2">
                                     <p class="m-0 p-0" style="font-size: 0.95rem;">1234 5678 9101 112</p>
@@ -432,7 +432,22 @@
                                     <button class="btn btn-outline-dark btn-sm rounded-4" data-copy="123456789101112" onclick="util.copy(this, 'Tersalin')"><i class="fa-solid fa-copy me-1"></i>Salin</button>
                                 </div>
 
-                                <p class="mt-2 mb-0 p-0" style="font-size: 0.95rem;">Nama Riski Siapa</p>
+                                <p class="mt-2 mb-0 p-0" style="font-size: 0.95rem;">A/N Rian Aryandi</p>
+                            </div>
+
+                            <div class="col card-body border rounded-4 shadow p-4 mx-4 mt-2 mb-4 text-start" data-aos="fade-down" data-aos-duration="1500">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/SeaBank.svg/1024px-SeaBank.svg.png" class="img-fluid w-25" alt="bca">
+
+                                <div class="d-flex justify-content-between align-items-center mt-2">
+                                    <p class="m-0 p-0" style="font-size: 0.95rem;">1234 5678 9101 112</p>
+                                    <!-- Ubah juga data-copy sesuai dengan no rekening -->
+                                    <button class="btn btn-outline-dark btn-sm rounded-4" data-copy="123456789101112" onclick="util.copy(this, 'Tersalin')"><i class="fa-solid fa-copy me-1"></i>Salin</button>
+                                </div>
+
+                                <p class="mt-2 mb-0 p-0" style="font-size: 0.95rem;">A/N Rian Aryandi</p>
+                            </div>
+
+                                
                             </div>
                         </div>
                     </div>
