--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <meta property="og:title" content="Website Undangan Pernikahan Rian & Afika">
     <meta property="og:description" content="Website Undangan Pernikahan Rian & Afika">
     <meta property="og:keywords" content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, template undangan pernikahan, undangan pernikahan, template undangan online, wedding invitation github, template website, template website undangan pernikahan">
-    <meta property="og:image" content="https://ulems.my.id/assets/images/bg.png">
-    <meta property="og:image:secure_url" content="https://ulems.my.id/assets/images/bg.png">
+    <meta property="og:image" content="https://i.ibb.co.com/TrTgXr0/bg.png">
+    <meta property="og:image:secure_url" content="https://i.ibb.co.com/TrTgXr0/bg.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:alt" content="Website Undangan Pernikahan Rian & Afika">
     <meta property="og:type" content="website">
@@ -123,7 +123,7 @@
                 </div>
 
                 <h2 class="font-esthetic my-4" style="font-size: 2.5rem;">Rian &amp; Afika</h2>
-                <p class="mb-0" style="font-size: 1.25rem;">Rabu, 15 Maret 2023</p>
+                <p class="mb-0" style="font-size: 1.25rem;">Minggu, 4 April 2023</p>
 
                 <a class="btn btn-outline-light btn-sm shadow rounded-pill px-3 my-2" target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=The%20Wedding%20of%20Wahyu%20and%20Riski&details=The%20Wedding%20of%20Wahyu%20and%20Riski%20%7C%2015%20Maret%202023%20%7C%20RT%2010%20RW%2002,%20Desa%20Pajerukan,%20Kec.%20Kalibagor,%20Kab.%20Banyumas,%20Jawa%20Tengah%2053191%20%7C%2010.00%20-%2011.00%20WIB&dates=20230315T100000/20230315T110000&location=https://goo.gl/maps/ALZR6FJZU3kxVwN86">
                     <i class="fa-solid fa-calendar-check me-2"></i>Save The Date
@@ -406,7 +406,7 @@
                 <div class="text-center">
 
                     <h2 class="font-esthetic mt-0 mb-3" style="font-size: 2.5rem;">Love Gift</h2>
-                    <p class="mb-3" style="font-size: 0.95rem;">Tanpa mengurangi rasa hormat, bagi Anda yang ingin memberikan tanda kasih untuk kami, dapat melalui:</p>
+                    <p class="mb-3" style="font-size: 0.95rem;">Tanpa mengurangi rasa hormat, bagi Anda yang ingin memberikan tanda kasih untuk kami, dapat melalui :</p>
 
                     <div class="overflow-x-hidden">
                         <div class="row row-cols-2">
@@ -415,9 +415,9 @@
                                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Bank_Central_Asia.svg/1598px-Bank_Central_Asia.svg.png" class="img-fluid w-25" alt="bca">
 
                                 <div class="d-flex justify-content-between align-items-center mt-2">
-                                    <p class="m-0 p-0" style="font-size: 0.95rem;">1234 5678 9101 112</p>
+                                    <p class="m-0 p-0" style="font-size: 0.95rem;">Belum Tersedia</p>
                                     <!-- Ubah juga data-copy sesuai dengan no rekening -->
-                                    <button class="btn btn-outline-dark btn-sm rounded-4" data-copy="123456789101112" onclick="util.copy(this, 'Tersalin')"><i class="fa-solid fa-copy me-1"></i>Salin</button>
+                                    <button class="btn btn-outline-dark btn-sm rounded-4" data-copy="Belum Tersedia" onclick="util.copy(this, 'Tersalin')"><i class="fa-solid fa-copy me-1"></i>Salin</button>
                                 </div>
 
                                 <p class="mt-2 mb-0 p-0" style="font-size: 0.95rem;">A/N Rian Aryandi</p>
@@ -427,9 +427,9 @@
                                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/Bank_Mandiri_logo_2016.svg/2560px-Bank_Mandiri_logo_2016.svg.png.svg.png" class="img-fluid w-25" alt="bni">
 
                                 <div class="d-flex justify-content-between align-items-center mt-2">
-                                    <p class="m-0 p-0" style="font-size: 0.95rem;">1234 5678 9101 112</p>
+                                    <p class="m-0 p-0" style="font-size: 0.95rem;">1770019393146</p>
                                     <!-- Ubah juga data-copy sesuai dengan no rekening -->
-                                    <button class="btn btn-outline-dark btn-sm rounded-4" data-copy="123456789101112" onclick="util.copy(this, 'Tersalin')"><i class="fa-solid fa-copy me-1"></i>Salin</button>
+                                    <button class="btn btn-outline-dark btn-sm rounded-4" data-copy="1770019393146" onclick="util.copy(this, 'Tersalin')"><i class="fa-solid fa-copy me-1"></i>Salin</button>
                                 </div>
 
                                 <p class="mt-2 mb-0 p-0" style="font-size: 0.95rem;">A/N Rian Aryandi</p>
@@ -439,13 +439,26 @@
                                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/SeaBank.svg/1024px-SeaBank.svg.png" class="img-fluid w-25" alt="bca">
 
                                 <div class="d-flex justify-content-between align-items-center mt-2">
-                                    <p class="m-0 p-0" style="font-size: 0.95rem;">1234 5678 9101 112</p>
+                                    <p class="m-0 p-0" style="font-size: 0.95rem;">901813065055</p>
                                     <!-- Ubah juga data-copy sesuai dengan no rekening -->
-                                    <button class="btn btn-outline-dark btn-sm rounded-4" data-copy="123456789101112" onclick="util.copy(this, 'Tersalin')"><i class="fa-solid fa-copy me-1"></i>Salin</button>
+                                    <button class="btn btn-outline-dark btn-sm rounded-4" data-copy="901813065055" onclick="util.copy(this, 'Tersalin')"><i class="fa-solid fa-copy me-1"></i>Salin</button>
                                 </div>
 
                                 <p class="mt-2 mb-0 p-0" style="font-size: 0.95rem;">A/N Rian Aryandi</p>
                             </div>
+
+                            <div class="col card-body border rounded-4 shadow p-4 mx-4 mt-2 mb-4 text-start" data-aos="fade-down" data-aos-duration="1500">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/72/Logo_dana_blue.svg/1024px-Logo_dana_blue.svg.png" class="img-fluid w-25" alt="bca">
+
+                                <div class="d-flex justify-content-between align-items-center mt-2">
+                                    <p class="m-0 p-0" style="font-size: 0.95rem;">083873043203</p>
+                                    <!-- Ubah juga data-copy sesuai dengan no rekening -->
+                                    <button class="btn btn-outline-dark btn-sm rounded-4" data-copy="083873043203" onclick="util.copy(this, 'Tersalin')"><i class="fa-solid fa-copy me-1"></i>Salin</button>
+                                </div>
+
+                                <p class="mt-2 mb-0 p-0" style="font-size: 0.95rem;">A/N Afika Maylia Dyah Kinanti</p>
+                            </div>
+
 
                                 
                             </div>
@@ -475,17 +488,7 @@
                             <option value="2">Berhalangan</option>
                         </select>
                     </div>
-
-                    <div class="mb-3">
-                        <div id="information" class="alert alert-info alert-dismissible fade show rounded-4" role="alert">
-                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" onclick="util.close()"></button>
-
-                            <p style="font-size: 1.5rem;">Bestieee!!!</p>
-                            <p class="m-0">Cobain like seperti Instagram, dengan tap tap bagian komentarnya</p>
-                            <hr class="my-2">
-                            <p class="m-0">Sama bisa format text seperti Whatsapp lohh... cobainn jugaaa, makaciwww bestieee</p>
-                        </div>
-
+                    
                         <label for="form-comment" class="form-label"><i class="fa-solid fa-comment me-1"></i>Ucapan &amp; Doa</label>
                         <textarea class="form-control shadow-sm rounded-4" id="form-comment" rows="4" placeholder="Tulis Ucapan dan Doa"></textarea>
                     </div>
@@ -542,12 +545,12 @@
                     <div class="row align-items-center justify-content-between flex-column flex-sm-row pb-3">
                         <div class="col-auto">
                             <small class="text-light">
-                                Build with<i class="fa-solid fa-heart mx-1"></i>Dewanakl
+                                Build with<i class="fa-solid fa-heart mx-1"></i>Gedomazo
                             </small>
                         </div>
                         <div class="col-auto">
                             <small>
-                                <i class="fa-brands fa-github me-1"></i><a target="_blank" href="https://github.com/dewanakl/undangan">dewanakl</a>
+                                <i class="fa-brands fa-github me-1"></i><a target="_blank" href="https://github.com/rianaryandi/undangan">Gedomazo</a>
                             </small>
                             <small>
                                 <i class="fa-brands fa-youtube me-1"></i><a target="_blank" href="https://www.youtube.com/watch?v=1WCIrw85zbQ">I Wanna Grow Old with You</a>
@@ -569,7 +572,7 @@
                     <img src="./assets/images/bg.png" alt="background">
                 </div>
 
-                <h2 class="font-esthetic my-4" style="font-size: 2.5rem;">Wahyu &amp; Riski</h2>
+                <h2 class="font-esthetic my-4" style="font-size: 2.5rem;">Rian &amp; Afika</h2>
                 <div id="guest-name" data-message="Kepada Yth Bapak/Ibu/Saudara/i"></div>
 
                 <button type="button" class="btn btn-light shadow rounded-4 mt-4" onclick="guest.open(this)">
