--- a/index.html
+++ b/index.html
@@ -123,11 +123,7 @@
                 </div>
 
                 <h2 class="font-esthetic my-4" style="font-size: 2.5rem;">Rian &amp; Afika</h2>
-                <p class="mb-0" style="font-size: 1.25rem;">Minggu, 4 April 2023</p>
-
-                <a class="btn btn-outline-light btn-sm shadow rounded-pill px-3 my-2" target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=The%20Wedding%20of%20Wahyu%20and%20Riski&details=The%20Wedding%20of%20Wahyu%20and%20Riski%20%7C%2015%20Maret%202023%20%7C%20RT%2010%20RW%2002,%20Desa%20Pajerukan,%20Kec.%20Kalibagor,%20Kab.%20Banyumas,%20Jawa%20Tengah%2053191%20%7C%2010.00%20-%2011.00%20WIB&dates=20230315T100000/20230315T110000&location=https://goo.gl/maps/ALZR6FJZU3kxVwN86">
-                    <i class="fa-solid fa-calendar-check me-2"></i>Save The Date
-                </a>
+                <p class="mb-0" style="font-size: 1.25rem;">Minggu, 4 April 2021</p>
 
                 <div class="d-flex justify-content-center align-items-center mt-4 mb-2">
                     <div class="mouse-animation border border-2">
@@ -309,7 +305,7 @@
                     </div>
 
                     <div class="py-2" data-aos="fade-up" data-aos-duration="1500">
-                        <a href="https://goo.gl/maps/ALZR6FJZU3kxVwN86" target="_blank" class="btn btn-outline-light btn-sm rounded-pill shadow mb-2 px-3"><i class="fa-solid fa-map-location-dot me-2"></i>Lihat Google Maps</a>
+                        <a href="https://maps.app.goo.gl/1wefaMkvBKdgmBvXA" target="_blank" class="btn btn-outline-light btn-sm rounded-pill shadow mb-2 px-3"><i class="fa-solid fa-map-location-dot me-2"></i>Lihat Google Maps</a>
                         <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.95rem;">RT 10 RW 02, Desa Sirnagalih, Kec. Tamansari, Kab. Bogor, Jawa Barat 16610</p>
                     </div>
 
