--- a/index.html
+++ b/index.html
@@ -93,12 +93,6 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#gallery">
-                    <i class="fa-solid fa-images"></i>
-                    <span class="d-block" style="font-size: 0.7rem;">Galeri</span>
-                </a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link" href="#comment">
                     <i class="fa-solid fa-comments"></i>
                     <span class="d-block" style="font-size: 0.7rem;">Ucapan</span>
@@ -124,10 +118,6 @@
 
                 <h2 class="font-esthetic my-4" style="font-size: 2.5rem;">Rian &amp; Afika</h2>
                 <p class="mb-0" style="font-size: 1.25rem;">Minggu, 4 April 2023</p>
-
-                <a class="btn btn-outline-light btn-sm shadow rounded-pill px-3 my-2" target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=The%20Wedding%20of%20Wahyu%20and%20Riski&details=The%20Wedding%20of%20Wahyu%20and%20Riski%20%7C%2015%20Maret%202023%20%7C%20RT%2010%20RW%2002,%20Desa%20Pajerukan,%20Kec.%20Kalibagor,%20Kab.%20Banyumas,%20Jawa%20Tengah%2053191%20%7C%2010.00%20-%2011.00%20WIB&dates=20230315T100000/20230315T110000&location=https://goo.gl/maps/ALZR6FJZU3kxVwN86">
-                    <i class="fa-solid fa-calendar-check me-2"></i>Save The Date
-                </a>
 
                 <div class="d-flex justify-content-center align-items-center mt-4 mb-2">
                     <div class="mouse-animation border border-2">
@@ -310,7 +300,7 @@
 
                     <div class="py-2" data-aos="fade-up" data-aos-duration="1500">
                         <a href="https://goo.gl/maps/ALZR6FJZU3kxVwN86" target="_blank" class="btn btn-outline-light btn-sm rounded-pill shadow mb-2 px-3"><i class="fa-solid fa-map-location-dot me-2"></i>Lihat Google Maps</a>
-                        <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.95rem;">RT 10 RW 02, Desa Sirnagalih, Kec. Tamansari, Kab. Bogor, Jawa Barat 16610</p>
+                        <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.95rem;">RT 03 RW 10, Desa Sirnagalih, Kec. Tamansari, Kab. Bogor, Jawa Barat 16610</p>
                     </div>
 
                     <!-- Love animation -->
@@ -324,97 +314,10 @@
                 </div>
             </div>
         </section>
-
-        <!-- Gallery -->
-        <section class="dark-section bg-black" id="gallery">
-            <div class="container pb-5 pt-4">
-                <div class="card-body border rounded-5 shadow p-3">
-
-                    <h2 class="font-esthetic text-center py-3" data-aos="fade-down" data-aos-duration="1500" style="font-size: 2.5rem;">Galeri</h2>
-
-                    <div id="carousel-image-one" data-aos="fade-up" data-aos-duration="1500" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carousel-image-one" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carousel-image-one" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#carousel-image-one" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                        </div>
-
-                        <div class="carousel-inner rounded-4">
-                            <div class="carousel-item active">
-                                <img src="https://picsum.photos/1280/720?random=1" alt="image 1" class="d-block w-100" onclick="util.modal(this)">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="https://picsum.photos/1280/720?random=2" alt="image 2" class="d-block w-100" onclick="util.modal(this)">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="https://picsum.photos/1280/720?random=3" alt="image 3" class="d-block w-100" onclick="util.modal(this)">
-                            </div>
-                        </div>
-
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carousel-image-one" data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-
-                        <button class="carousel-control-next" type="button" data-bs-target="#carousel-image-one" data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
-                    </div>
-
-                    <div id="carousel-image-two" data-aos="fade-up" data-aos-duration="1500" class="carousel slide mt-4" data-bs-ride="carousel">
-                        <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carousel-image-two" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carousel-image-two" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#carousel-image-two" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                        </div>
-
-                        <div class="carousel-inner rounded-4">
-                            <div class="carousel-item active">
-                                <img src="https://picsum.photos/1280/720?random=4" alt="image 4" class="d-block w-100" onclick="util.modal(this)">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="https://picsum.photos/1280/720?random=5" alt="image 5" class="d-block w-100" onclick="util.modal(this)">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="https://picsum.photos/1280/720?random=6" alt="image 6" class="d-block w-100" onclick="util.modal(this)">
-                            </div>
-                        </div>
-
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carousel-image-two" data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-
-                        <button class="carousel-control-next" type="button" data-bs-target="#carousel-image-two" data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </section>
-
+        
         <!-- Wave Separator -->
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="color-theme-black">
-            <path fill="currentColor" fill-opacity="1" d="M0,96L30,106.7C60,117,120,139,180,154.7C240,171,300,181,360,186.7C420,192,480,192,540,181.3C600,171,660,149,720,154.7C780,160,840,192,900,208C960,224,1020,224,1080,208C1140,192,1200,160,1260,138.7C1320,117,1380,107,1410,101.3L1440,96L1440,0L1410,0C1380,0,1320,0,1260,0C1200,0,1140,0,1080,0C1020,0,960,0,900,0C840,0,780,0,720,0C660,0,600,0,540,0C480,0,420,0,360,0C300,0,240,0,180,0C120,0,60,0,30,0L0,0Z"></path>
-        </svg>
-
-        <!-- Love Gift -->
-        <div class="container">
-            <div class="pb-2">
-                <div class="text-center">
-
-                    <h2 class="font-esthetic mt-0 mb-3" style="font-size: 2.5rem;">Love Gift</h2>
-                    <p class="mb-3" style="font-size: 0.95rem;">Tanpa mengurangi rasa hormat, bagi Anda yang ingin memberikan tanda kasih untuk kami, dapat melalui :</p>
-
-                    <div class="overflow-x-hidden">
-                        <div class="row row-cols-2">
-
-                            <div class="col card-body border rounded-4 shadow p-4 mx-4 mt-2 mb-4 text-start" data-aos="fade-down" data-aos-duration="1500">
-                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Bank_Central_Asia.svg/1598px-Bank_Central_Asia.svg.png" class="img-fluid w-25" alt="bca">
-
-                                <div class="d-flex justify-content-between align-items-center mt-2">
+            <path fill="currentColor" fill-opacity="1" d="M0,96L30,106.n-items-center mt-2">
                                     <p class="m-0 p-0" style="font-size: 0.95rem;">Belum Tersedia</p>
                                     <!-- Ubah juga data-copy sesuai dengan no rekening -->
                                     <button class="btn btn-outline-dark btn-sm rounded-4" data-copy="Belum Tersedia" onclick="util.copy(this, 'Tersalin')"><i class="fa-solid fa-copy me-1"></i>Salin</button>
