--- a/index.html
+++ b/index.html
@@ -317,15 +317,31 @@
         
         <!-- Wave Separator -->
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="color-theme-black">
-            <path fill="currentColor" fill-opacity="1" d="M0,96L30,106.n-items-center mt-2">
-                                    <p class="m-0 p-0" style="font-size: 0.95rem;">Belum Tersedia</p>
+            <path fill="currentColor" fill-opacity="1" d="M0,96L30,106.7C60,117,120,139,180,154.7C240,171,300,181,360,186.7C420,192,480,192,540,181.3C600,171,660,149,720,154.7C780,160,840,192,900,208C960,224,1020,224,1080,208C1140,192,1200,160,1260,138.7C1320,117,1380,107,1410,101.3L1440,96L1440,0L1410,0C1380,0,1320,0,1260,0C1200,0,1140,0,1080,0C1020,0,960,0,900,0C840,0,780,0,720,0C660,0,600,0,540,0C480,0,420,0,360,0C300,0,240,0,180,0C120,0,60,0,30,0L0,0Z"></path>
+        </svg>
+
+        <!-- Love Gift -->
+        <div class="container">
+            <div class="pb-2">
+                <div class="text-center">
+
+                    <h2 class="font-esthetic mt-0 mb-3" style="font-size: 2.5rem;">Love Gift</h2>
+                    <p class="mb-3" style="font-size: 0.95rem;">Tanpa mengurangi rasa hormat, bagi Anda yang ingin memberikan tanda kasih untuk kami, dapat melalui:</p>
+
+                    <div class="overflow-x-hidden">
+                        <div class="row row-cols-2">
+
+                            <div class="col card-body border rounded-4 shadow p-4 mx-4 mt-2 mb-4 text-start" data-aos="fade-down" data-aos-duration="1500">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Bank_Central_Asia.svg/1598px-Bank_Central_Asia.svg.png" class="img-fluid w-25" alt="bca">
+
+                                <div class="d-flex justify-content-between align-items-center mt-2">
+                                    <p class="m-0 p-0" style="font-size: 0.95rem;">1234 5678 9101 112</p>
                                     <!-- Ubah juga data-copy sesuai dengan no rekening -->
-                                    <button class="btn btn-outline-dark btn-sm rounded-4" data-copy="Belum Tersedia" onclick="util.copy(this, 'Tersalin')"><i class="fa-solid fa-copy me-1"></i>Salin</button>
+                                    <button class="btn btn-outline-dark btn-sm rounded-4" data-copy="123456789101112" onclick="util.copy(this, 'Tersalin')"><i class="fa-solid fa-copy me-1"></i>Salin</button>
                                 </div>
 
-                                <p class="mt-2 mb-0 p-0" style="font-size: 0.95rem;">A/N Rian Aryandi</p>
+                                <p class="mt-2 mb-0 p-0" style="font-size: 0.95rem;">Nama Wahyu Siapa</p>
                             </div>
-
                             <div class="col card-body border rounded-4 shadow p-4 mx-4 mt-2 mb-4 text-start" data-aos="fade-down" data-aos-duration="1500">
                                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/Bank_Mandiri_logo_2016.svg/2560px-Bank_Mandiri_logo_2016.svg.png.svg.png" class="img-fluid w-25" alt="bni">
 
